Fix image names

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         <img src="art/BirdPortrait.png" alt="BirdPortrait">
         <img src="art/Yona.jpg" alt="Yona">
         <img src="art/lips.png" alt="lips">
-        <img src="art/CoffeeCup.png" alt="CoffeeCup">
+        <img src="art/CoffeeCup.PNG" alt="CoffeeCup">
       </div>
     </div>
     <!--End of Portfolio -->
@@ -48,7 +48,7 @@
         <img alt="Email" src="images/Email.png">
       </a>
       <a href="https://www.linkedin.com/in/jonathan-ma327/" target="_blank">
-        <img alt="linkedIn" src="images/linkedIn.png">
+        <img alt="linkedIn" src="images/LinkedIn.png">
       </a>
       <a href="https://github.com/JonMa327-art" target="_blank">
         <img alt="Github" src="images/Github.png">
