CoffeeCup Image fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         <img src="art/BirdPortrait.png" alt="BirdPortrait">
         <img src="art/Yona.jpg" alt="Yona">
         <img src="art/lips.png" alt="lips">
-        <img src="art/CoffeeCup.PNG" alt="CoffeeCup">
+        <img src="art/CoffeeCup.png" alt="CoffeeCup">
       </div>
     </div>
     <!--End of Portfolio -->
