renaming LinkedIn png

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <img alt="Email" src="images/Email.png">
     </a>
     <a href="https://www.linkedin.com/in/jonathan-ma327/" target="_blank">
-      <img alt="linkedIn" src="images/LinkedIn.png">
+      <img alt="linkedIn" src="images/linkedIn.png">
     </a>
     <a href="https://github.com/JonMa327-art" target="_blank">
       <img alt="Github" src="images/Github.png">
