--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="Images/RESUME.pdf" target="_blank">Resume</a></li>
+          <li><a href="https://docs.google.com/gview?url=https://github.com/JonMa327-art/Resume/raw/main/RESUME.pdf&embedded=true" target="_blank">Resume</a></li>
         </ul>
 
       </div>
