--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="container">
     <div class="aboutMe">
       <h1>About me</h1>
-      <p>Welcome! Thanks for stopping by. I'm a undergrad at Northeastern University currently working towards my bachelor's degree in Computer Science and Media Art. When I have time, somethings that I love to do are illistrating, cooking, playing video games and spending time with others. Fell free to contact me with the links below!</p>
+      <p>Welcome! Thanks for stopping by. I'm a undergrad at Northeastern University currently working towards my bachelor's degree in Computer Science and Media Art. When I have time, somethings that I love to do are illistrating, cooking, playing video games and spending time with others. Feel free to contact me at <strong>ma.jo@northeastern.edu</strong> or with the links below!</p>
     </div>
   </div>
   <!--End of About me-->
@@ -117,9 +117,6 @@
   <div class="container">
     <div class="contact">
       <h1> Contact </h1>
-      <a href = "mailto: ma.jo@northeastern.edu" target="_blank"></a>
-      <img alt="Email" src="images/Email.png">
-    </a>
     <a href="https://www.linkedin.com/in/jonathan-ma327/" target="_blank">
       <img alt="linkedIn" src="images/LinkedIn.png">
     </a>
