Slight Grammer fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="container">
     <div class="aboutMe">
       <h1>About me</h1>
-      <p>Welcome! Thanks for stopping by. I'm a undergrad at Northeastern University currently working towards my bachelor's degree in Computer Science and Media Art. When I have time, somethings that I love to do are illistrating, cooking, playing video games and spending time with others. Feel free to contact me at <strong>ma.jo@northeastern.edu</strong> or with the links below!</p>
+      <p>Welcome! Thanks for stopping by. I am an undergrad at Northeastern University currently working towards my Bachelor's degree in Computer Science and Media Art. When I have time, some things I love to do are illustrating, cooking, playing video games and spending time with others. Feel free to contact me at <strong>ma.jo@northeastern.edu</strong> or with the links below.</p>
     </div>
   </div>
   <!--End of About me-->
