--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,7 @@
   <div class="container">
     <div class="images">
       <h1>Illistrations / Artwork / 3D Models</h1>
-      <img src="art/Charlotte.png" alt="Charlotte">
-      <img src="art/Anna.jpg" alt="Anna">
+      <img src="art/Ariel.png" alt="Ariel">
       <img src="art/eyes.png" alt="lips">
       <img src="art/BirdPortrait.png" alt="BirdPortrait">
       <img src="art/Yona.jpg" alt="Yona">
