--- a/index.html
+++ b/index.html
@@ -33,202 +33,6 @@
             justify-content: center;
             color: #696969;
         }
-
-        .skills {
-            width: 95%;
-            max-width: 1450px;
-            height: auto;
-            margin: auto;
-            margin-top: 50px;
-            margin-bottom: 100px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-        .skills__title {
-            font-size: 40px;
-            font-weight: 600;
-            margin: 0;
-            margin-bottom: 25px;
-            color: #CE1C70;
-            text-align: center;
-        }
-
-        .skills__card {
-            width: 31%;
-            height: 500px;
-            margin: 0;
-            margin-top: 10px;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            border-radius: 25px;
-            box-shadow: 1px 4px 6px #AAAAAA;
-            background-color: #F8F8F8;
-        }
-
-        .skills__card::before {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 50px;
-            z-index: -10;
-            top: -15px;
-            border-radius: 25px 25px 0 0;
-            background-color: #D57CA6;
-        }
-
-        .skills__card:nth-child(2):before {
-            background-color: #96A4D3;
-        }
-
-        .skills__card:nth-child(3):before {
-            background-color: #B598D5;
-        }
-
-        .skills__icon {
-            width: 100px;
-            margin: auto;
-            margin-top: 35px;
-            height: auto;
-        }
-
-        .skills__icon img {
-            width: 100%;
-        }
-
-        .skills__cardTitle {
-            margin: 0;
-            margin: 20px 0 5px;
-            font-size: 26px;
-            font-weight: 600;
-            color: #696969;
-        }
-
-        .skills__list {
-            width: 75%;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            font-size: 20px;
-            font-weight: 600;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 45px;
-            color: #F8F8F8;
-        }
-
-        .skills__list li {
-            margin: 15px 0;
-            border-radius: 25px;
-        }
-
-        @media only screen and (max-width:1024px) {
-            .skills {
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            .skills__card {
-                width: 100%;
-                height: 180px;
-                margin-bottom: 40px;
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-            }
-
-            .skills__card::before {
-                top: -10px;
-            }
-
-            .skills__icon {
-                width: 100px;
-                margin: 0;
-                height: auto;
-            }
-
-            .skills__cardTitle {
-                margin: 0;
-                font-size: 22px;
-            }
-
-            .skills__left {
-                width: 300px;
-                min-width: 300px;
-                height: auto;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .skills__list {
-                width: auto;
-                font-size: 18px;
-                line-height: 1em;
-            }
-
-            .skills__list li {
-                margin: 8px 10px;
-                padding: 10px 20px;
-                float: left;
-                border-radius: 25px;
-            }
-        }
-
-        @media only screen and (max-width:768px) {
-            .skills {
-                margin-bottom: 0px;
-            }
-
-            .skills__title {
-                font-size: 26px;
-                font-weight: 600;
-                margin: 0;
-                margin-bottom: 25px;
-                color: #CE1C70;
-                text-align: center;
-            }
-
-            .skills__card {
-                height: auto;
-                padding-bottom: 25px;
-                flex-direction: column;
-            }
-
-            .skills__icon {
-                width: 80px;
-            }
-
-            .skills__cardTitle {
-                margin: 0;
-                margin: 10px 0 5px;
-                font-size: 20px;
-            }
-
-            .skills__left {
-                width: 100%;
-                min-width: none;
-                height: auto;
-                margin-top: 20px;
-            }
-
-            .skills__list {
-                font-size: 16px;
-                left: 50%;
-                padding: 0 20px;
-                margin: auto;
-
-            }
-
-            .skills__list li {
-                margin: 8px 8px;
-            }
-
-        }
     </style>
 </head>
 
@@ -269,7 +73,7 @@
     <div class="projects__backgroundTop" style="background-image: url(images/purpleWaveTop.svg);"></div>
     <div class="projects__background">
         <div class="projects">
-            <h2 class="projects__title">Featured <span class="projects__title highlight">Projects</span></h2>
+            <h2 class="projects__title">Featured <span class="projects__title highlight">Projects!</span></h2>
             <div class="projects__container">
                 <div class="projects__models">
                     <img src="images/KitchenRender.jpg" alt="">
@@ -310,10 +114,10 @@
                 <h2 class="skills__cardTitle">Design</h2>
             </div>
             <ul class="skills__list">
+                <li style="background-color: #516DC9;">Clip Studio Paint</li>
+                <li style="background-color: #516DC9;">Adobe XD</li>
                 <li style="background-color: #516DC9;">Photoshop</li>
                 <li style="background-color: #516DC9;">Illustrator</li>
-                <li style="background-color: #516DC9;">Adobe XD</li>
-                <li style="background-color: #516DC9;">Clip Studio Paint</li>
             </ul>
         </div>
 
