--- a/3D.html
+++ b/3D.html
@@ -14,21 +14,23 @@
     <!-- navigation -->
     <div class="logo">JM</div>
 
+
     <div class="nav">
         <div class="nav__logo">JM</div>
         <ul class="nav__list">
-            <li class="nav__link">
-                <a href="index.html">HOME</a>
-            </li>
-            <li class="nav__link">
-                <a href="WebDesigns.html">WEB DESIGNS</a>
-            </li>
-            <li class="nav__link">
-                <a href="3D.html" style="color: #8D54CB; text-decoration: underline;">3D WORK</a>
-            </li>
-            <li class="nav__link">
-                <a href="contact.html">CONTACT</a>
-            </li>
+            <a href="index.html">
+                <li class="nav__link">HOME</li>
+            </a>
+            <a href="WebDesigns.html">
+                <li class="nav__link">WEB DESIGNS</li>
+            </a>
+            <a href="3D.html" style="color: #8D54CB;">
+                <li class="nav__linkActive">3D MODELS</li>
+            </a>
+
+            <a href="contact.html">
+                <li class="nav__link">CONTACT</li>
+            </a>
         </ul>
     </div>
 
