--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Jonathan Ma's Main Page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <style>
@@ -44,18 +44,19 @@
     <div class="nav">
         <div class="nav__logo">JM</div>
         <ul class="nav__list">
-            <li class="nav__link">
-                <a href="index.html" style="color: #8D54CB; text-decoration: underline;">HOME</a>
-            </li>
-            <li class="nav__link">
-                <a href="WebDesigns.html">WEB DESIGNS</a>
-            </li>
-            <li class="nav__link">
-                <a href="3D.html">3D WORK</a>
-            </li>
-            <li class="nav__link">
-                <a href="contact.html">CONTACT</a>
-            </li>
+            <a href="index.html" style="color: #8D54CB;">
+                <li class="nav__linkActive">HOME</li>
+            </a>
+            <a href="WebDesigns.html">
+                <li class="nav__link">WEB DESIGNS</li>
+            </a>
+            <a href="3D.html">
+                <li class="nav__link">3D MODELS</li>
+            </a>
+
+            <a href="contact.html">
+                <li class="nav__link">CONTACT</li>
+            </a>
         </ul>
     </div>
 
@@ -82,7 +83,7 @@
                 </div>
                 <div class="projects__designs">
                     <img src="images/SchdularPreview.png" alt="">
-                    <a href="WebDesigns.html"><button class="projects__button">See My Web Designs</button></a>
+                    <a href="WebDesigns.html"><button class="projects__button">See My Web Designs!</button></a>
                 </div>
             </div>
         </div>
