testing contact form

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             <h2>Name</h2>
             <input type="text" name="name" placeholder="name">
             <h2>Email</h2>
-            <input type="text" name="email" placeholder="email">
+            <input type="text" name="mail" placeholder="email">
             <h2>Subject</h2>
             <input type="text" name="subject" placeholder="subject">
             <h2>Message</h2>
