test contact form 3

--- a/contact.html
+++ b/contact.html
@@ -110,20 +110,22 @@
         </ul>
     </div>
 
-    <div class="contact__background">
-        <form class="contact" action="contactform.php" method="post">
-            <h2>Name</h2>
-            <input type="text" name="name" placeholder="name">
-            <h2>Email</h2>
-            <input type="text" name="mail" placeholder="email">
-            <h2>Subject</h2>
-            <input type="text" name="subject" placeholder="subject">
-            <h2>Message</h2>
-            <textarea name="message" placeholder="message"></textarea>
-            <button type="submit" name="submit">Send</button>
+    <main>
+        <div class="contact__background">
+            <form class="contact" action="contactform.php" method="post">
+                <h2>Name</h2>
+                <input type="text" name="name">
+                <h2>Email</h2>
+                <input type="text" name="mail" placeholder="email">
+                <h2>Subject</h2>
+                <input type="text" name="subject" placeholder="subject">
+                <h2>Message</h2>
+                <textarea name="message" placeholder="message"></textarea>
+                <button type="submit" name="submit">Send</button>
 
-        </form>
-    </div>
+            </form>
+        </div>
+    </main>
 </body>
 
 </html>
