--- a/contact.html
+++ b/contact.html
@@ -110,22 +110,23 @@
         </ul>
     </div>
 
-    <main>
-        <div class="contact__background">
-            <form class="contact" action="contactform.php" method="post">
-                <h2>Name</h2>
-                <input type="text" name="name">
-                <h2>Email</h2>
-                <input type="text" name="mail" placeholder="email">
-                <h2>Subject</h2>
-                <input type="text" name="subject" placeholder="subject">
-                <h2>Message</h2>
-                <textarea name="message" placeholder="message"></textarea>
-                <button type="submit" name="submit">Send</button>
+    <div class="contact__background">
+        <form class="contact" action="https://formsubmit.co/ratherbejon@gmail.com" method="POST">
+            <h2>Email</h2>
+            <input type="email" name="email">
+            <h2>Message</h2>
+            <input type="text" name="message">
+            <!-- <textarea name="message"></textarea> -->
+            <button type="submit">Send</button>
 
-            </form>
-        </div>
-    </main>
+        </form>
+    </div>
+
+    <!-- <form action="https://formsubmit.co/your@email.com" method="POST">
+        <input type="text" name="name" required>
+        <input type="email" name="email" required>
+        <button type="submit">Send</button>
+    </form> -->
 </body>
 
 </html>
