complete contact form

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="projects__backgroundTop" style="background-image: url(images/purpleWaveTop.svg);"></div>
     <div class="projects__background">
         <div class="projects">
-            <h2 class="projects__title">Featured <span class="projects__title highlight">Projects!</span></h2>
+            <h2 class="projects__title highlight">Featured Projects!</h2>
             <div class="projects__container">
                 <div class="projects__models">
                     <img src="images/KitchenRender.jpg" alt="">
@@ -82,7 +82,7 @@
                     <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
                 <div class="projects__designs">
-                    <img src="images/SchdularPreview.png" alt="">
+                    <img src="images/SchdularPreview.jpg" alt="">
                     <a href="WebDesigns.html"><button class="projects__button">See My Web Designs!</button></a>
                 </div>
             </div>
