adjusted entire page

--- a/3D.html
+++ b/3D.html
@@ -24,7 +24,7 @@
             <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
             </a>
-            <a href="3D.html" style="color: #8D54CB;">
+            <a href="3D.html">
                 <li class="nav__linkActive">3D MODELS</li>
             </a>
 
