--- a/WebDesigns.html
+++ b/WebDesigns.html
@@ -24,7 +24,7 @@
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html" style="color: #8D54CB;">
+            <a href="WebDesigns.html">
                 <li class="nav__linkActive">WEB DESIGNS</li>
             </a>
             <a href="3D.html">
