--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="nav">
         <div class="nav__logo">JM</div>
         <ul class="nav__list">
-            <a href="index.html" style="color: #8D54CB;">
+            <a href="index.html">
                 <li class="nav__linkActive">HOME</li>
             </a>
             <a href="WebDesigns.html">
@@ -71,10 +71,10 @@
     </div> -->
 
     <!-- Projects -->
-    <div class="projects__backgroundTop" style="background-image: url(images/purpleWaveTop.svg);"></div>
+    <div class="projects__backgroundTop" style="background-image: url(images/BlueWaveTop.svg);"></div>
     <div class="projects__background">
         <div class="projects">
-            <h2 class="projects__title highlight">Featured Projects!</h2>
+            <h2 class="projects__title">Featured Projects!</h2>
             <div class="projects__container">
                 <div class="projects__models">
                     <img src="images/KitchenRender.jpg" alt="">
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div class="projects__backgroundBottom" style="background-image: url(images/purpleWaveBottom.svg);"></div>
+    <div class="projects__backgroundBottom" style="background-image: url(images/BlueWaveBottom.svg);"></div>
 
     <!-- skills -->
     <h2 class="skills__title">What I Can Do!</h2>
@@ -98,7 +98,7 @@
                 <div class="skills__icon">
                     <img src="images/WebDevIcon.svg" alt="">
                 </div>
-                <h2 class="skills__cardTitle">Web Development</h2>
+                <h2 class="skills__cardTitle" style="color: #CE1C70;">Web Development</h2>
             </div>
             <ul class="skills__list">
                 <li style="background-color: #CE1C70;">JavaScript</li>
@@ -112,7 +112,7 @@
                 <div class="skills__icon">
                     <img src="images/DesignIcon.svg" alt="">
                 </div>
-                <h2 class="skills__cardTitle">Design</h2>
+                <h2 class="skills__cardTitle" style="color: #516DC9;">Design</h2>
             </div>
             <ul class="skills__list">
                 <li style="background-color: #516DC9;">Clip Studio Paint</li>
@@ -127,7 +127,7 @@
                 <div class="skills__icon">
                     <img src="images/ModelIcon.svg" alt="">
                 </div>
-                <h2 class="skills__cardTitle">3D Modeling</h2>
+                <h2 class="skills__cardTitle" style="color: #8D54CB">3D Modeling</h2>
             </div>
             <ul class="skills__list">
                 <li style="background-color: #8D54CB;">Maya</li>
@@ -139,8 +139,7 @@
     <!-- about me -->
     <div class="about">
         <div class="about__headshot">
-            <!-- <img src="images/HeadshotBlob.svg" alt="" class="about__headshotBlob"> -->
-            <img src="images/JonathanMa2.png" alt="">
+            <img src="images/Headshot.png" alt="">
         </div>
 
         <div class="about__info">
@@ -148,8 +147,11 @@
                 Want Creative Web Designs?<br>
                 <span class="about__title highlight">I’m Your Guy!</span>
             </p>
-            <p class="about__discription">I’m a UI/UX Designer and a 3D modeler that loves to create. I’ve always
-                believe
+            <div class="about__headshotSmall">
+                <img src="images/JonathanMa2.png" alt="">
+            </div>
+            <p class="about__discription">I’m a UI/UX designer and a 3D modeler that loves to create. I’ve always
+                believed
                 that in order to make something new and meaningful is to love the process and to share that with others.
                 Design and art are wherever you look, and creating something that you know has made an impact is what
                 makes
