--- a/ThankYou.html
+++ b/ThankYou.html
@@ -25,8 +25,7 @@
             <a href="3D.html">
                 <li class="nav__link">3D MODELS</li>
             </a>
-
-            <a href="contact.html" style="color: #8D54CB;">
+            <a href="contact.html">
                 <li class="nav__linkActive">CONTACT</li>
             </a>
         </ul>
