added Kitchen Model file

--- a/3D.html
+++ b/3D.html
@@ -39,22 +39,6 @@
 
         <div class="models__row">
             <div class="models__containerLeft">
-                <img src="images/KitchenRender.jpg" alt="" class="models_preview">
-                <h2 class="models__title">Kitchen Scene</h2>
-                <a href="" class="models__link">See More ></a>
-                <p class="models__discription">A scene based off of my parents kitchen in Maine.</p>
-            </div>
-
-            <div class="models__containerRight">
-                <img src="images/WizardSceneRender.jpg" alt="" class="models_preview">
-                <h2 class="models__title">Wizard Scene</h2>
-                <a href="" class="models__link">See More ></a>
-                <p class="models__discription">A scene of a wizard’s desk late at night.</p>
-            </div>
-        </div>
-
-        <div class="models__row">
-            <div class="models__containerLeft">
                 <img src="images/SeraphineRender.jpg" alt="" class="models_preview">
                 <h2 class="models__title">Seraphine Model</h2>
                 <a href="" class="models__link">See More ></a>
@@ -66,6 +50,22 @@
                 <h2 class="models__title">Gun Model</h2>
                 <a href="" class="models__link">See More ></a>
                 <p class="models__discription">A gun modeled based of the Glock 17 Gen5 pistol.</p>
+            </div>
+        </div>
+
+        <div class="models__row">
+            <div class="models__containerLeft">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="" class="models_preview">
+                <h2 class="models__title">Kitchen Scene</h2>
+                <a href="KitchenModel.html" class="models__link">See More ></a>
+                <p class="models__discription">A scene based off of my parents kitchen in Maine.</p>
+            </div>
+
+            <div class="models__containerRight">
+                <img src="images/WizardSceneRender.jpg" alt="" class="models_preview">
+                <h2 class="models__title">Wizard Scene</h2>
+                <a href="" class="models__link">See More ></a>
+                <p class="models__discription">A scene of a wizard’s desk late at night.</p>
             </div>
         </div>
 
