--- a/WebDesigns.html
+++ b/WebDesigns.html
@@ -46,15 +46,39 @@
                     eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
                     accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
                     Lorem ipsum dolor sit amet. </p>
-                <a href="" class="design__link">See More ></a>
+                <a href=""> <button class="design__link">See More ></button></a>
             </div>
-            <div class="design__preview">
-                <img src="images/KitchenRender.jpg" alt="">
+            <div class="design__previewLarge">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+            <div class="design__previewSmall">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
             </div>
         </div>
     </div>
 
-    <div class="designs purple__background design__last">
+    <div class="designs blue__background">
+        <div class="designs__container">
+            <div class="design__previewLarge">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+            <div class="design__info">
+                <h2 class="design__title white__font">Schdular</h2>
+                <p class="design__discription white__font"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam
+                    nonumy
+                    eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                    Lorem ipsum dolor sit amet. </p>
+                <a href=""> <button class="design__link blue__white">See More ></button></a>
+            </div>
+            <div class="design__previewSmall">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="designs">
         <div class="designs__container">
             <div class="design__info">
                 <h2 class="design__title">Schdular</h2>
@@ -62,10 +86,35 @@
                     eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
                     accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
                     Lorem ipsum dolor sit amet. </p>
-                <a href="" class="design__link">See More ></a>
+                <a href=""> <button class="design__link">See More ></button></a>
             </div>
-            <div class="design__preview">
-                <img src="images/KitchenRender.jpg" alt="">
+            <div class="design__previewLarge">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+            <div class="design__previewSmall">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- Move the design last to the last div if you add a new one -->
+    <div class="designs blue__background design__last">
+        <div class="designs__container">
+            <div class="design__previewLarge">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
+            </div>
+            <div class="design__info">
+                <h2 class="design__title white__font">Schdular</h2>
+                <p class="design__discription white__font"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam
+                    nonumy
+                    eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                    Lorem ipsum dolor sit amet. </p>
+                <a href=""> <button class="design__link blue__white">See More ></button></a>
+            </div>
+            <div class="design__previewSmall">
+                <img src="images/Kitchen/KitchenRender1.jpg" alt="">
             </div>
         </div>
     </div>
