--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="projects__title">Featured Projects!</h2>
             <div class="projects__container">
                 <div class="projects__models">
-                    <img src="images/KitchenRender.jpg" alt="">
+                    <img src="images/Kitchen/KitchenRender1.jpg" alt="">
                     <img src="images/GunRender.jpg" alt="">
                     <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
