--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,27 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <style>
+        .contact__title {
+            font-size: 50px;
+            font-weight: 600;
+            color: #EFEFEF;
+            margin: 0;
+            margin-bottom: 40px;
+        }
 
+        @media only screen and (max-width:1024px) {
+            .contact__title {
+                font-size: 40px;
+                margin-bottom: 35px;
+            }
+        }
+
+        @media only screen and (max-width:768px) {
+            .contact__title {
+                font-size: 28px;
+                margin-bottom: 30px;
+            }
+        }
     </style>
 </head>
 
@@ -36,14 +56,15 @@
     </div>
 
     <div class="contact__background">
+        <h2 class="contact__title">Let's Connect!</h2>
         <form class="contact" action="https://formsubmit.co/ratherbejon@gmail.com" method="POST">
             <input type="hidden" name="_next" value="https://jonathanma1.com/ThankYou.html">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="New submission!">
             <h2>Email</h2>
-            <input type="email" name="email" required>
+            <input type="email" name="email" placeholder="example@gmail.com" required>
             <h2>Message</h2>
-            <textarea type="text" name="message" required></textarea>
+            <textarea type="text" name="message" placeholder="Come Say Hello!" required></textarea>
             <button type="submit">Send</button>
 
         </form>
